--- a/src/components/dialogs/ModalWrapper/styles.module.scss
+++ b/src/components/dialogs/ModalWrapper/styles.module.scss
@@ -51,11 +51,12 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: transparentize($color: #000000, $amount: 0.9);
+  background: transparentize($color: $content_bg, $amount: 0.1);
   cursor: pointer;
   animation: appear 0.25s forwards;
 
   @include can_backdrop {
     backdrop-filter: blur(15px);
+    background: transparentize($color: $content_bg, $amount: 0.9);
   }
 }
